fix(debug): force -g on the server's on-save compile so replayed frames keep locals (DB-5)
At a breakpoint the Variables/scopes pane and local evaluation came up empty for a genuine
local in the suspended method, even on an ordinary @Test method that a healthy -g build would
debug fine. Breakpoints still bound (the line stopped), so only locals were affected — which
made it look like a project build-flag problem.

The cause was Lathe's own on-save compile, not the project. On every save, didSave ->
WorkspaceSession.onSave runs a FULL compile, and a FULL compile calls task.generate(), writing
.class files into config.latheClassesDir() = .lathe/<module>/classes (or test-classes) — the
same directory the Maven compiler shim mirrors into. But ModuleSourceCompiler.buildOptions added
--release, -encoding, -parameters, --enable-preview, and the project's captured compilerArgs,
and never -g. javac's default without -g is -g:source,lines: it keeps the LineNumberTable (so
breakpoints bind) but omits the LocalVariableTable. So on save the server overwrote the
Maven-mirrored bytecode (which had the LVT, from maven-compiler-plugin's <debug>true> default)
with a -g-less version, and the debug session — replaying .lathe/ — loaded a class with no
locals. Files not yet re-saved kept the Maven mirror and debugged fine, which is why the failure
looked build-specific.

buildOptions now adds -g for CompileMode.FULL, so the classes the server writes into .lathe/
carry a LocalVariableTable and the replayed bytecode always exposes locals. FAST/OPEN only
analyze() (no bytecode written) and are unchanged.

With the fix, a missing local-variable table is a rare case — a class Lathe did not compile (a
precompiled dependency) or a synthetic lambda/bridge frame — so JdiInterpreter.readLocal now
surfaces one concise message ("local '<name>' is unavailable: this frame has no local-variable
table") instead of the earlier build-advice wording, which the fix made misleading. Also imports
AbsentInform